fix checkbox not visible

--- a/app/ratel/src/common/components/checkbox/style.css
+++ b/app/ratel/src/common/components/checkbox/style.css
@@ -3,11 +3,10 @@
     height: 1rem;
     box-sizing: border-box;
     padding: 0;
-    border: none;
+    border: 1px solid var(--gray-500);
     border-radius: 4px;
     margin: 0;
     background-color: var(--primary-color-3);
-    box-shadow: inset 0 0 0 1px var(--primary-color-7);
     color: var(--secondary-color-4);
     cursor: pointer;
 }
